# hangarbaycc

./: .gitignore  2. Open a terminal and run  CMakeLists.txt  DECISIONS.md  ERRORS.md  PROGRESS.md  README.md  REMOTE_TEST_CHECKLIST.md  grok-local-server.sh  grok-local-unload.sh  hangarbay-dictate.sh  hangarbaycc-editing-rules.md  hangarbaycc-proxy.py  hangarbaycc.sh  isolate.sh  launch-aider.sh  launch-ornith.sh  mud.py  mud.py.plan.md  ornith-editing-rules.md  ornith-temp-proxy.py  plan_upgrade.md  prime_numbers.c  searxng-server.sh  searxng-settings.yml  setup-whisper-server.sh
.claude/skills/hangarbaycc-bench/: SKILL.md
.claude/skills/hangarbaycc-doctor/: SKILL.md
.claude/skills/ornith-bench/: SKILL.md
.claude/skills/ornith-doctor/: SKILL.md
app/: CMakeLists.txt
app/src/: main.cpp
bench/: bench-local.py  bench-xai.py  extract-code.py  run-bench.sh  tokens-sec.py
bench/tasks-hard/01-c-rpn-calc/: check.sh  prompt.md
bench/tasks-hard/02-c-fix-bugs/: check.sh  prompt.md
bench/tasks-hard/03-cpp-interval-merge/: check.sh  prompt.md
bench/tasks-hard/04-cpp-expr-eval/: check.sh  prompt.md
bench/tasks-hard/05-py-json-flatten/: check.sh  prompt.md
bench/tasks-hard/06-py-lru-cache/: check.sh  prompt.md
bench/tasks-hard/07-py-business-days/: check.sh  prompt.md
core/: CMakeLists.txt
core/include/: GameState.hpp
core/src/: game_state.cpp
platform/: CMakeLists.txt
platform/include/: platform.hpp
platform/src/: platform.cpp
qt_hello/: CMakeLists.txt  main.cpp  wordprocessor.cpp
searxng-mcp/: server.py
tests/: CMakeLists.txt  test_main.cpp
(+18 files in other folders)
